--- a/app/src/main/res/layout/post_list_item.xml
+++ b/app/src/main/res/layout/post_list_item.xml
@@ -1,45 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="10dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/iv_profile"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/j"
-            android:scaleType="centerCrop"/>
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/j" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
+            android:layout_marginStart="20dp"
             android:orientation="vertical"
-            android:layout_marginStart="20dp">
+            android:padding="10dp">
 
             <TextView
                 android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
                 android:text="Steve"
-                android:textStyle="bold"/>
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tv_user_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
                 android:text="\@Coder"
-                android:textStyle="normal"/>
+                android:textSize="18sp"
+                android:textStyle="normal" />
 
 
         </LinearLayout>
@@ -51,102 +51,101 @@
         android:id="@+id/tv_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="normal"
-        android:textSize="18sp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="10dp"
         android:layout_marginStart="35dp"
-        android:text="Hello My Guys I have just got my new Beast"/>
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
+        android:text="Hello My Guys I have just got my new Beast"
+        android:textSize="18sp"
+        android:textStyle="normal" />
 
-    <ImageView
-        android:id="@+id/iv_post"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:src="@drawable/n"
-        android:scaleType="centerCrop"
-        android:layout_margin="20dp"/>
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:cardCornerRadius="8dp">
+
+        <ImageView
+            android:id="@+id/iv_post"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/n" />
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:weightSum="8"
-        >
+        android:weightSum="8">
 
         <ImageView
             android:id="@+id/iv_reply"
-            android:layout_marginStart="20dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
             android:layout_weight="1"
-            android:src="@drawable/ic_reply"/>
+            android:src="@drawable/ic_reply" />
+
         <TextView
             android:id="@+id/tv_reply"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_gravity="center_vertical"
             android:layout_margin="5dp"
+            android:layout_weight="1"
             android:text="2K" />
 
         <ImageView
             android:id="@+id/iv_reweet"
-            android:layout_marginStart="20dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
             android:layout_weight="1"
-            android:src="@drawable/ic_retweet"/>
+            android:src="@drawable/ic_retweet" />
 
         <TextView
+            android:id="@+id/tv_retweet"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_gravity="center_vertical"
             android:layout_margin="5dp"
+            android:layout_weight="1"
             android:text="200" />
 
         <ImageView
             android:id="@+id/like_false"
-            android:layout_marginStart="20dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
             android:layout_weight="1"
-            android:src="@drawable/ic_like_false"/>
+            android:src="@drawable/ic_like_false" />
+
         <TextView
             android:id="@+id/tv_like_false"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_gravity="center_vertical"
             android:layout_margin="5dp"
+            android:layout_weight="1"
             android:text="2K" />
 
         <ImageView
             android:id="@+id/iv_share"
-            android:layout_marginStart="20dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
             android:layout_weight="1"
-            android:src="@drawable/ic_share"/>
+            android:src="@drawable/ic_share" />
+
         <TextView
             android:id="@+id/tv_share"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_gravity="center_vertical"
             android:layout_margin="5dp"
+            android:layout_weight="1"
             android:text="2K" />
 
     </LinearLayout>
-
-    <View
-        android:layout_marginTop="4dp"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/white"
-        />
-
-
-
 
 </androidx.appcompat.widget.LinearLayoutCompat>
